[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cna"
version = "0.2.0"
authors = [
    { name = "Yakir Reshef", email = "yreshef@broadinstitute.org" },
    { name = "Laurie Rumker", email = "lrumker@broadinstitute.org" }
]
description = "covarying neighborhood analysis"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "anndata>=0.9.2",
    "numpy>=1.21,<1.25",
    "pandas>=2.0.3",
    "scipy>=1.11.1",
    "argparse>=1.1",
    "matplotlib>=3.7.2",
    "scanpy>=1.9.3",
    "numba>=0.57.1",
    "multianndata>=0.0.4",
]
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/immunogenomics/cna"
issues = "https://github.com/immunogenomics/cna/issues"
tutorial = "https://nbviewer.jupyter.org/github/yakirr/cna/blob/master/demo/demo.ipynb"

[tool.rye] 
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "mypy>=1.4.1",
    "ruff>=0.0.280",
]

[tool.rye.scripts]
lint = { chain = ["lint:ruff", "lint:black"] }
"lint:black" = "black --check src"
"lint:ruff" = "ruff --fix src"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true


[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "I001",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B027",
    "C901",
    "D100",
    "D103",
    "D205",
    "D212",
    "D415",
    "E203",
    "E501",
    "FBT003",
    "N802",
    "N803",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S105",
    "S106",
    "S107",
]
unfixable = [
    "F401",
    "UP007",
]
exclude = [
    ".git",
    ".hg",
    "__pycache__",
    "_bin/*",
    "_build/*",
    "_ig_fbcode_wheel/*",
    "buck-out/*",
    "third-party-buck/*",
    "third-party2/*",
    "dist",
    ".venv",
    ".nox",
    ".mypy_cache",
    ".pytype",
    ".svn",
    "__pypackages__",
]
src = ["src"]

[tool.ruff.mccabe]
max-complexity = 50

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
