[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cna"
version = "0.3.0"
authors = [
    { name = "Yakir Reshef", email = "yreshef@broadinstitute.org" },
    { name = "Laurie Rumker", email = "lrumker@broadinstitute.org" }
]
description = "covarying neighborhood analysis"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "argparse>=1.1",
    "anndata==0.11.3",
    "multianndata>=0.0.4",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scanpy>=1.10.4",
    "scipy>=1.15.1",
    "matplotlib>=3.10.0",
]
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/immunogenomics/cna"
issues = "https://github.com/immunogenomics/cna/issues"
tutorial = "https://nbviewer.jupyter.org/github/yakirr/cna/blob/master/demo/demo.ipynb"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.9.2",
    "sourcery>=1.31.0",
]